--- a/PreprocessData_ModelBuild.ipynb
+++ b/PreprocessData_ModelBuild.ipynb
@@ -136,55 +136,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "intents = defaultdict(list)\n",
-    "patterns = defaultdict(list)\n",
-    "responses = defaultdict(list)\n",
+    "# generate intent dictionary from excel file\n",
+    "def generate_intent_dictionary():\n",
+    "    \n",
+    "    # check if file is already save in json format\n",
+    "    if os.path.exists('Processed_Data/intents.json'):\n",
+    "        intents = None\n",
+    "        with open('Processed_Data/intents.json', 'r') as fp:\n",
+    "            intents = json.load(fp)\n",
+    "        return intents\n",
     "\n",
-    "# define categories/classes for sentenses\n",
-    "classes = ['what', 'how many', 'where', 'when', 'how much', 'how', 'who', 'which', 'whose']\n",
-    "class_value_dict = {'tag': None, 'patterns': [], 'responses': [], 'context_set': '', 'context_filter':''}\n",
-    "data_size = len(excel_df)\n",
-    "for i in range(data_size):\n",
-    "    q_text = excel_df.iloc[i]['Q'].lower()\n",
-    "    a_text = excel_df.iloc[i]['A']\n",
-    "    for category in classes:        \n",
-    "        if category in q_text:\n",
-    "            patterns[category].append(q_text)\n",
-    "            responses[category].append(a_text)\n",
-    "            \n",
-    "for category in classes:\n",
+    "    intents = defaultdict(list)\n",
+    "    patterns = defaultdict(list)\n",
+    "    responses = defaultdict(list)\n",
+    "\n",
+    "    # define categories/classes for sentenses\n",
+    "    classes = ['what', 'how many', 'where', 'when', 'how much', 'how', 'who', 'which', 'whose']\n",
     "    class_value_dict = {'tag': None, 'patterns': [], 'responses': [], 'context_set': '', 'context_filter':''}\n",
-    "    class_value_dict['tag'] = category\n",
-    "    class_value_dict['patterns'] = patterns[category]\n",
-    "    class_value_dict['responses'] = responses[category]\n",
-    "    class_value_dict['context_set'] = ''\n",
-    "    class_value_dict['context_filter'] =''\n",
-    "    intents['intents'].append(class_value_dict)\n",
+    "    data_size = len(excel_df)\n",
+    "    for i in range(data_size):\n",
+    "        q_text = excel_df.iloc[i]['Q'].lower()\n",
+    "        a_text = excel_df.iloc[i]['A']\n",
+    "        for category in classes:        \n",
+    "            if category in q_text:\n",
+    "                patterns[category].append(q_text)\n",
+    "                responses[category].append(a_text)\n",
     "\n",
-    "# save json file for model training    \n",
-    "with open('Processed_Data/intents.json', 'w') as fp:\n",
-    "    json.dump(intents, fp)\n",
+    "    for category in classes:\n",
+    "        class_value_dict = {'tag': None, 'patterns': [], 'responses': [], 'context_set': '', 'context_filter':''}\n",
+    "        class_value_dict['tag'] = category\n",
+    "        class_value_dict['patterns'] = patterns[category]\n",
+    "        class_value_dict['responses'] = responses[category]\n",
+    "        class_value_dict['context_set'] = ''\n",
+    "        class_value_dict['context_filter'] =''\n",
+    "        intents['intents'].append(class_value_dict)\n",
+    "\n",
+    "    # save json file for model training    \n",
+    "    with open('Processed_Data/intents.json', 'w') as fp:\n",
+    "        json.dump(intents, fp)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "intents = None\n",
-    "with open('Processed_Data/intents.json', 'r') as fp:\n",
-    "    intents = json.load(fp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,41 +214,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = []\n",
-    "classes = []\n",
-    "documents = []\n",
-    "ignore_words = ['?']\n",
-    "stop_words = set(stopwords.words('english'))\n",
-    "# loop through each sentence in our intents patterns\n",
-    "for intent in intents['intents']:\n",
-    "    for pattern in intent['patterns']:\n",
-    "        # simple pre-processing of data\n",
-    "        pattern = do_simple_data_preprocessing(pattern)\n",
-    "        # tokenize each word in the sentence\n",
-    "        w = nltk.word_tokenize(pattern)\n",
-    "        # add to our words list\n",
-    "        words.extend(w)\n",
-    "        # add to documents in our corpus\n",
-    "        w1 = [w_value for w_value in w if w_value not in classes]\n",
-    "        documents.append((w1, intent['tag']))\n",
-    "        # add to our classes list\n",
-    "        if intent['tag'] not in classes:\n",
-    "            classes.append(intent['tag'])\n",
+    "def create_bow_docs(intents):\n",
+    "    words = []\n",
+    "    classes = []\n",
+    "    documents = []\n",
+    "    ignore_words = ['?']\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    # loop through each sentence in our intents patterns\n",
+    "    for intent in intents['intents']:\n",
+    "        for pattern in intent['patterns']:\n",
+    "            # simple pre-processing of data\n",
+    "            pattern = do_simple_data_preprocessing(pattern)\n",
+    "            # tokenize each word in the sentence\n",
+    "            w = nltk.word_tokenize(pattern)\n",
+    "            # add to our words list\n",
+    "            words.extend(w)\n",
+    "            # add to documents in our corpus\n",
+    "            w1 = [w_value for w_value in w if w_value not in classes]\n",
+    "            documents.append((w1, intent['tag']))\n",
+    "            # add to our classes list\n",
+    "            if intent['tag'] not in classes:\n",
+    "                classes.append(intent['tag'])\n",
     "\n",
-    "# stem and lower each word and remove duplicates\n",
-    "words = [stemmer.stem(w.lower()) for w in words if (w not in ignore_words and w not in stop_words)]\n",
-    "words = sorted(list(set(words)))\n",
+    "    # stem and lower each word and remove duplicates\n",
+    "    words = [stemmer.stem(w.lower()) for w in words if (w not in ignore_words and w not in stop_words)]\n",
+    "    words = sorted(list(set(words)))\n",
     "\n",
-    "# remove duplicates\n",
-    "classes = sorted(list(set(classes)))\n",
+    "    # remove duplicates\n",
+    "    classes = sorted(list(set(classes)))\n",
     "\n",
-    "# print (len(documents), \"documents\")\n",
-    "# print (len(classes), \"classes\", classes)\n",
-    "# print (len(words), \"unique stemmed words\", words)"
+    "    return (words, classes, documents)\n",
+    "    # print (len(documents), \"documents\")\n",
+    "    # print (len(classes), \"classes\", classes)\n",
+    "    # print (len(words), \"unique stemmed words\", words)"
    ]
   },
   {
@@ -261,10 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get intent data dictionary\n",
+    "intents = generate_intent_dictionary()\n",
+    "\n",
+    "# make bow, classes, documents\n",
+    "(words, classes, documents) = create_bow_docs(intents)\n",
+    "\n",
     "# create our training data\n",
     "training = []\n",
     "output = []\n",
@@ -307,19 +314,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Step: 43399  | total loss: \u001b[1m\u001b[32m0.09752\u001b[0m\u001b[0m | time: 4.285s\n",
-      "| Adam | epoch: 050 | loss: 0.09752 - acc: 0.9596 -- iter: 6936/6941\n",
-      "Training Step: 43400  | total loss: \u001b[1m\u001b[32m0.09033\u001b[0m\u001b[0m | time: 4.289s\n",
-      "| Adam | epoch: 050 | loss: 0.09033 - acc: 0.9636 -- iter: 6941/6941\n",
+      "Training Step: 43399  | total loss: \u001b[1m\u001b[32m0.04204\u001b[0m\u001b[0m | time: 4.102s\n",
+      "| Adam | epoch: 050 | loss: 0.04204 - acc: 0.9813 -- iter: 6936/6941\n",
+      "Training Step: 43400  | total loss: \u001b[1m\u001b[32m0.03817\u001b[0m\u001b[0m | time: 4.106s\n",
+      "| Adam | epoch: 050 | loss: 0.03817 - acc: 0.9832 -- iter: 6941/6941\n",
       "--\n",
-      "INFO:tensorflow:C:\\Users\\LENOVO\\Documents\\Jay_jupyter_notebooks\\Chatbot-using-NLTK-Tensorflow\\JAY_model.tflearn is not in all_model_checkpoint_paths. Manually adding it.\n"
+      "INFO:tensorflow:C:\\Users\\LENOVO\\Documents\\Jay_jupyter_notebooks\\Simple-Chatbot-NLTK-Tensorflow\\JAY_model.tflearn is not in all_model_checkpoint_paths. Manually adding it.\n"
      ]
     }
    ],
@@ -350,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +473,7 @@
        "4  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -503,8 +510,8 @@
      "text": [
       "[0 0 0 ... 0 0 0]\n",
       "['how', 'how many', 'what', 'when', 'where', 'which', 'who', 'whose']\n",
-      "[[1.7375799e-08 1.0553632e-13 3.5432011e-05 3.3502842e-05 4.3343896e-15\n",
-      "  9.9992883e-01 2.2464455e-06 1.3433620e-14]]\n"
+      "[[3.7563237e-09 2.5984709e-14 2.1792453e-05 6.2759931e-08 1.4867381e-15\n",
+      "  9.9997425e-01 3.9202951e-06 4.3642521e-15]]\n"
      ]
     }
    ],
@@ -524,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
