--- a/Response_Generator.ipynb
+++ b/Response_Generator.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate response using Model and Cosine Simillarity "
+    "# Generate response using Model and Cosine Simillarity \n",
+    "### 1. Predict class of user's input using model\n",
+    "### 2. Generate appropriate response using Cosine Simillarity within predicted class "
    ]
   },
   {
@@ -97,7 +99,11 @@
       "keep_dims is deprecated, use keepdims instead\n",
       "WARNING:tensorflow:From C:\\Users\\LENOVO\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
-      "Use tf.cast instead.\n"
+      "Use tf.cast instead.\n",
+      "WARNING:tensorflow:From C:\\Users\\LENOVO\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\training\\saver.py:1266: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use standard file APIs to check for files with this prefix.\n",
+      "INFO:tensorflow:Restoring parameters from C:\\Users\\LENOVO\\Documents\\Jay_jupyter_notebooks\\Simple-Chatbot-NLTK-Tensorflow\\JAY_model.tflearn\n"
      ]
     }
    ],
@@ -161,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,8 +178,10 @@
     "        pat_vec = bow(patterns[i], words)\n",
     "        simil_list.append(cosine_similarity([sent_vec],[pat_vec]))\n",
     "    a = simil_list.index(max(simil_list))\n",
-    "    print (max(simil_list))\n",
-    "    print (patterns[a])\n",
+    "    print (\"Maximum simillarity score: \\n=> \",max(simil_list))\n",
+    "    print (\"--------------------------------------------------\")\n",
+    "    print (\"Nearer Question from Pre-train dataset of predicted category::\\n=> \", patterns[a])\n",
+    "    print (\"--------------------------------------------------\")\n",
     "    return a"
    ]
   },
@@ -186,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +236,7 @@
     "                        if show_details: print ('tag:', i['tag'])\n",
     "                        # a random response from the intent\n",
     "                        index_value = index_from_cosine_simillarity(sentence, i['patterns'])\n",
-    "                        return print (i['responses'][index_value])\n",
+    "                        return print ('BOT Response:\\n=> ',i['responses'][index_value])\n",
     "                        # return print(random.choice(i['responses']))\n",
     "\n",
     "            results.pop(0)"
@@ -243,40 +251,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.70710678]]\n",
-      "which film had song springtime for hitler\n",
-      "The Producers\n"
+      "Maximum simillarity score: \n",
+      "=>  [[0.75]]\n",
+      "--------------------------------------------------\n",
+      "Nearer Question from Pre-train dataset of predicted category::\n",
+      "=>  which film had song springtime for hitler\n",
+      "--------------------------------------------------\n",
+      "BOT Response:\n",
+      "=>  The Producers\n"
      ]
     }
    ],
    "source": [
-    "response('song Springtime for whom')"
+    "response('tell me film which has song Springtime')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.40824829]]\n",
-      "corson and stoughton are the inventors of what\n",
-      "CS Gas\n"
+      "Maximum simillarity score: \n",
+      "=>  [[0.5]]\n",
+      "--------------------------------------------------\n",
+      "Nearer Question from Pre-train dataset of predicted category::\n",
+      "=>  what currency consists of 100 groschen\n",
+      "--------------------------------------------------\n",
+      "BOT Response:\n",
+      "=>  Austrian Schilling\n"
      ]
     }
    ],
    "source": [
-    "response('who invented the television')"
+    "response('100 Groschen comming under which currency')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum simillarity score: \n",
+      "=>  [[0.79056942]]\n",
+      "--------------------------------------------------\n",
+      "Nearer Question from Pre-train dataset of predicted category::\n",
+      "=>  what world capital city is heated by volcanic springs\n",
+      "--------------------------------------------------\n",
+      "BOT Response:\n",
+      "=>  Reykjavik (Iceland)\n"
+     ]
+    }
+   ],
+   "source": [
+    "response('city which is heated by volcanic springs')"
    ]
   }
  ],
